# erp-api

./: .env.local.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
app/: main.py
app/core/: config.py  (+2 more)
docs/: dev-ports.md
scripts/: db_smoke.py  export_openapi.py  print_routes.py
tests/: test_admin_user_management_contract.py  test_admin_user_management_routes.py  test_alembic_revision_id_contract.py  test_app_import.py  test_app_registry_admin_runtime.py  test_app_registry_app_metadata_foundation.py  test_app_registry_gateway_dependencies.py  test_app_registry_metadata_retirement.py  test_app_registry_runtime.py  test_app_registry_runtime_governance.py  test_app_registry_runtime_governance_execution.py  test_app_registry_self_description_projection.py  test_app_registry_self_description_query.py  test_app_registry_self_description_sync.py  test_app_registry_service_auth.py  test_app_registry_system_profile_foundation.py  test_auth_navigation_routes.py  test_erp_control_plane_page_registry_migration.py  test_erp_control_plane_tab_routes_migration.py  test_erp_independent_system_child_routes_migration.py  test_erp_independent_system_parent_route_migration.py  test_erp_independent_system_registration_pages_migration.py  test_erp_system_child_pages_migration.py  test_erp_user_permission_child_pages_migration.py  test_health.py  test_page_registry_contract.py  test_system_iam_independent_system_user_permissions_query.py  test_system_iam_projection_models.py  test_system_iam_snapshot_sync.py  test_system_iam_snapshot_sync_routes.py  (+9 more)
(+119 files in other folders)
